@@ -15,30 +15,60 @@
 	<name>Java-Features</name>
 
 	<properties>
+		<java.version>14</java.version>
+		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>13</java.version> 
-        <assertj.version>3.6.2</assertj.version>
+		<junit-jupiter.version>5.6.0</junit-jupiter.version>
+		<junit.platform.version>1.5.2</junit.platform.version>
+		<junit.platform.version>1.6.0</junit.platform.version>
+		<lombok.version>1.18.10</lombok.version>
+		<assertj.version>3.6.2</assertj.version>
 	</properties>
 	
-	 <dependencies> 
+	 <dependencies>
 
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertj.version}</version>
-            <scope>test</scope>
-        </dependency>
+		 <dependency>
+			 <groupId>org.junit.jupiter</groupId>
+			 <artifactId>junit-jupiter-engine</artifactId>
+			 <version>${junit-jupiter.version}</version>
+			 <scope>test</scope>
+		 </dependency>
+		 <dependency>
+			 <groupId>org.junit.jupiter</groupId>
+			 <artifactId>junit-jupiter-params</artifactId>
+			 <version>${junit-jupiter.version}</version>
+			 <scope>test</scope>
+		 </dependency>
+		 <dependency>
+			 <groupId>org.junit.platform</groupId>
+			 <artifactId>junit-platform-runner</artifactId>
+			 <version>${junit.platform.version}</version>
+			 <scope>test</scope>
+		 </dependency>
 
-    </dependencies>
+		 <dependency>
+			 <groupId>org.assertj</groupId>
+			 <artifactId>assertj-core</artifactId>
+			 <version>${assertj.version}</version>
+			 <scope>test</scope>
+		 </dependency>
+		 <dependency>
+			 <groupId>org.junit.jupiter</groupId>
+			 <artifactId>junit-jupiter-api</artifactId>
+			 <version>5.6.2</version>
+		 </dependency>
+
+	 </dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
+				<version>${maven.compiler.plugin.version}</version>
 				<configuration>
-					<release>11</release>
+					<release>${java.version}</release>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
